--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,5 +5,9 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= render 'form' %>
+    <div class="gravatar_edit">
+      <%= gravatar_for @user %>
+      <a href="https://gravatar.com/emails" target="_blank">change</a>
+    </div>
   </div>
 </div>
